# deductible-tracker

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  Cargo.toml  DEV_SETUP.md  Dockerfile  Makefile  README.md  VALUATION_PLAN.md  add_dark_mode.js  cookies.txt  copilot-instructions.md  dev.db  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  jest.config.js  package-lock.json  package.json
.agents/: README.md
.agents/skills/browser-testing-with-devtools/: SKILL.md
.agents/skills/code-simplification/: SKILL.md
.agents/skills/context-engineering/: SKILL.md
.agents/skills/frontend-feature/: SKILL.md
.agents/skills/rust-db-operation/: SKILL.md
.agents/skills/testing-patterns/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/skills/frontend-feature/: SKILL.md
.github/skills/rust-db-operation/: SKILL.md
.github/skills/testing-patterns/: SKILL.md
.github/workflows/: clear-caches.yml  clear-deployments-caches.yml  codeql-analysis.yml  deploy.yml  secret-scan.yml
.gstack/qa-reports/: qa-report-mobile-2026-04-14.md
docs/: dev-oracle.md
docs/design-patterns/rust/: 01-introduction.md  02-idioms.md  03-design-patterns.md  04-anti-patterns.md  05-functional-usage.md  06-resources.md  README.md  index.json
docs/design-patterns/rust/anti-patterns/: 04-01-clone-to-satisfy-borrow-checker.md  04-02-deny-warnings.md  04-03-deref-polymorphism.md
docs/design-patterns/rust/functional/: 05-01-programming-paradigms.md  05-02-generics-as-type-classes.md  05-03-functional-language-optics.md
docs/design-patterns/rust/idioms/: 02-01-borrowed-args.md  02-02-concat-format.md  02-03-constructors.md  02-04-default-trait.md  02-05-collections-deref.md  02-06-finalisation-destructors.md  02-07-mem-take-replace.md  02-08-on-stack-dynamic-dispatch.md  02-09-ffi-idioms.md  02-10-iterating-option.md  02-11-closure-vars.md  02-12-non-exhaustive.md  02-13-doc-init.md  02-14-temporary-mutability.md  02-15-return-consumed-on-error.md
docs/design-patterns/rust/patterns/: 03-01-command.md  03-02-interpreter.md  03-03-newtype.md  03-04-raii-guards.md  03-05-strategy.md  03-06-visitor.md  03-07-builder.md  03-08-fold.md  03-09-struct-decomposition.md  03-10-prefer-small-crates.md  03-11-contain-unsafety.md  03-12-custom-traits.md  03-13-object-based-apis.md  03-14-type-consolidation.md
docs/design-patterns/rust/resources/: 06-01-design-principles.md
migrations/: init.sql  seed_valuations.sql
public/: sw.js
scripts/: prepare-wallet-secret.sh
scripts/oracle-dev-startup/: 00-noop.sql  01-grant-pdbadmin.sql  02-init-dispatch-0.sql  02-init-dispatch-1.sql  02-init-local.sql  03-seed-valuations-local.sql  10-init-gvenzl.sh
src/: auth.rs  lib.rs  main.rs  observability.rs  storage.rs
src/auth_sections/flow/: crypto_utils.rs  oauth_flow.rs  risc.rs
src/auth_sections/profile/: profile_handlers.rs
src/auth_sections/support/: token_and_provider_support.rs
src/db/: audit.rs  charities.rs  core.rs  donations.rs  mod.rs  models.rs  receipts.rs  users.rs  valuations.rs
src/db/core_sections/bootstrap/: runtime_and_bootstrap.rs
src/db/core_sections/charities/: charities_and_receipt_ocr.rs  charity_lookup_and_create.rs  charity_updates_and_deletion.rs
src/db/core_sections/donations/: donation_updates_and_valuations.rs  donations_and_receipts.rs
src/db/oracle/: bootstrap.rs  charities.rs  donations.rs  mod.rs  receipts.rs  row_helpers.rs  wallet_config.rs
src/db/sqlite/: donations.rs  mod.rs  receipts.rs
src/main_sections/assets/: asset_helpers.rs
src/main_sections/bootstrap/: server_bootstrap.rs
src/main_sections/http/: http_pipeline_and_assets.rs
src/ocr/: endpoint.rs  mod.rs
src/routes/: charities.rs  donations.rs  mod.rs  receipts.rs  reports.rs  sync.rs  tax.rs  valuations.rs
src/routes/charities/: api_fetch.rs  charity_enrichment.rs  handlers.rs
static/: index.html  sw.js
static/assets/: app-66a294bf31fd.js  app-79cca1f55251.js  app-8dbb0bd6c9f7.js  app-a7a453990202.js  app-e95af98fae82.js  db-c260a5e79074.js  import-37611f5e376a.js  import-aee2c97c06ab.js  seed-8d5ea2f0491f.js  sync-59e295466f4b.js  sync-6f31d522f14e.js  tailwind-3dfde548a106.css  tailwind-414405eb429d.css  tailwind-9364a81677a3.css  tailwind-97af9ee47af5.css  tailwind-d5958dbfdd62.css  tailwind.css  upload-5328d9ad2069.js  upload-aab4c8eddb1e.js  valuations-f85a010039bb.js  valuations-fe3c977f92e3.js
static/assets/services/: api-client-8994c2196080.js  app-shell-667ea992589d.js  app-shell.test-988a42955eb9.js  current-user-0057c351cbf9.js  donation-figures-e567da1674c4.js  donation-figures.test-0301acad2bf9.js  http-131d1b127e6b.js  tax-estimates-e926b6b3a686.js  tax-estimates.test-a2aef1f632b6.js
static/assets/utils/: html-476db31b4c4b.js  html.test-d9a48f517183.js
static/assets/views/routes/: charities-e9c0ad06ee4c.js  (+4 more)
static/css/: fonts.css  input.css
static/js/: app.js  boot.js  db.js  import.js  router.js  seed.js  sync.js  upload.js  valuations.js
static/js/services/: api-client.js  app-shell.js  app-shell.test.js  auth-state.js  cache-manager.js  crypto.js  current-user.js  donation-figures.js  donation-figures.test.js  encrypt-transport.js  http.js  icons.js  receipt-upload.js  tax-estimates.js  tax-estimates.test.js
static/js/utils/: html.js  html.test.js  pagination.js  table.js
static/js/views/: login.js
terraform/: .terraform.lock.hcl  cloud-init.yaml  do_update.sh  logging.tf  main.tf  outputs.tf  poll-deploy.sh  user_data_test.yaml  variables.tf
tests/: integration_auth_profile.rs  integration_charities_visibility.rs  integration_js_jest.rs  integration_mistral_endpoint.rs  integration_observability.rs  integration_oracle_performance_paths.rs  integration_oracle_wallet_config.rs  integration_receipts_audit.rs  integration_valuations.rs  rust_helpers.rs
tests/js/: sync.test.js
tests/js/services/: app-shell.test.js  donation-figures.test.js  http.test.js  receipt-upload.test.js  tax-estimates.test.js
tests/js/utils/: html.test.js
(+11 files in other folders)
